fix: tweak sliderInput class to prevent cut off input field text in firefox

--- a/src/components/Modals/ColorPicker/Slider.css
+++ b/src/components/Modals/ColorPicker/Slider.css
@@ -10,11 +10,11 @@
 .sliderInput {
   color: black;
   background: hsl(0, 0%, 88%);
-  max-width: 40px;
+  max-width: 50px;
   height: 30px;
   border: none;
   margin: 0 5px 0 0;
-  padding: 0 0 0 5px;
+  padding: 0 5px 0 5px;
   border-radius: 3px;
   font-family: "Varela Round", sans-serif;
   font-family: var(--app-font);
